--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,58 +1,13 @@
 version: '3'
 services:
   web:
-    container_name: web_server
+    container_name: web
     image: nginx:latest
+    restart: always
     ports:
       - 80:80
     volumes:
-      - ./nginx/www:/code
-      - ./nginx/site.conf:/etc/nginx/conf.d/default.conf
-    networks:
-      - app-network
+      - ./src:/var/www/html
 
-  api:
-    build:
-      context: api
-      target: dev-envs
-    container_name: t5_api
-    environment:
-      PORT: 1200
-    ports:
-      - 1200:1200
-    volumes:
-      - ./api/src:/app
-    restart: always
-    networks:
-      - app-network
-
-  db:
-    container_name: mariadb_sad
-    image: mariadb
-    restart: always
-    ports:
-      - 3306:3306
-    volumes:
-      - ./db:/var/lib/mysql
-    environment:
-      MARIADB_ROOT_PASSWORD: 'progetto_sad'
-      MARIADB_DATABASE: 'sad_db'
-    networks:
-      - app-network
-
-  javat5:
-    build:
-      context: ./javat5
-      dockerfile: Dockerfile
-    container_name: javat5
-    ports:
-      - 1100:1100
-    volumes:
-      - .javat5:/root/.javat5
-    tty: true
-    networks:
-      - app-network
-
-networks:
-  app-network:
-    driver: bridge
+    
+    
